--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		
 </head>
 <body>
-		
-</body>
+		<div id="clock"></div>
+</body> 
+<footer>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script src= "clock.js"></script>
+</footer>
 </html>
