--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-		
+		<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 		<div id="clock"></div>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script src= "clock.js"></script>
 </body> 
-<footer>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src= "clock.js"></script>
-</footer>
 </html>
