--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+		<div id="date"></div>
 		<div id="clock"></div>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 	<script src= "clock.js"></script>
 </body> 
 </html>
